* skript.latex   + Die Vorlesung von letzter Woche 2006-06-28 mit einigen Lücken und die     neuen Übungsaufgaben.
git-svn-id: https://svn.lug-jena.de/uni-skripte@385 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -5037,6 +5037,188 @@ $A(x,0)$ & $=$ & $x+2$ & für $x\geq 2$ \\
 $A(x+1,y+1)$ & $=$ & $A(A(x,y+1),y)$ & für $x\geq 0$ und $y\geq 0$
 \end{tabular}
 
+% 2006-06-28
+
+\section{Repräsentierbarkeit von Relationen und Funktionen}
+
+Die bekannten Sätze der Zahlentheorie scheinen auch formal beweisbar. Da
+stellt sich natürlich auch die Frage, ob es Sätze gibt, die wir nicht
+beweisen können. Dafür brauchen wir den Begriff der Repräsentierbarkeit.
+
+Gleichheitsrelation: Seien $n$ und $m$ natürliche Zahlen. Wenn $n=m$,
+dann gilt $\Svdash \overline{n} = \overline{m}$. Wenn $n\ne m$, dann gilt
+$\Svdash \overline{n}\ne\overline{m}$.
+
+Sei $R\subseteq \N^{k}$ eine $k$-stellige Relation über den natürlichen
+Zahlen. $R$ heißt \emph{repräsentierbar} in $S$, falls es eine Formel
+$\alpha$ von $S$ mit freien Variablen $x_{1}, x_{2},\ldots,x_{k}$ gibt,
+so dass für alle $n_{1}, n_{2},\ldots,n_{k}\in\N$ gilt:
+\begin{itemize}
+ \item falls $(m,n)\in\R^{2}$ \todo{hier fehlt was}
+\end{itemize}
+
+\begin{bsp}
+  $=$ ist repräsentierbar in $S$ durch $x_{1} =x_{2}$. ohne Beweis
+
+  $<$ ist repräsentierbar in $S$ durch $x_{1} < x_{2}$ (steht für
+  $\exists z\colon z\ne0\wedge x_{1}+z=x_{2}$).
+
+  Seien $n_{1},n_{2}\in\N$
+  \begin{enumerate}
+   \item $n_{1}<n_{2}$, Es ist $\Svdash \exists z\colon z\ne0 \wedge
+    \overline{n_{1}}+z=\overline{n_{2}}$ zu beweisen
+    \begin{align*}
+      (1)\quad &\overline{n_{1}} + \overline{b} = \overline{n_{1}}
+         &\text{Lemma,~ $n_{1}+b = n_{2}$ für ein $b>0$}\\
+      (2)\quad &\overline{b} \ne 0 &\text{Axiom}\\
+      (3)\quad &\overline{b} \ne 0 \wedge \todo{hier fehlt was} &
+         \text{Konjunktionsregel}\\
+      \todo{hier fehlt was}
+    \end{align*}
+
+   \item $n_{1}\not< n_{2}$. Es ist $\Svdash \neg(\exists z\colon z\ne 0
+    \wedge \overline{n_{1}} + z = \overline{n_{2}})$ zu beweisen.
+    \begin{enumerate}
+     \item $n_{1}=n_{2}$
+      \begin{align*}
+        (1)\quad & \overline{n_{1}} = \overline{n_{2}} &\text{Lemma}\\
+        (2)\quad & \overline{n_{2}} < \overline{n_{1}} \vee
+           \overline{n_{1}} = \overline{n_{2}} & \text{Disjunktionsregel}
+      \end{align*}
+
+     \item $n_{2}<n_{1}$
+      \begin{align*}
+        (1)\quad &\overline{n_{2}} < \overline{n_{1}} &\text{wie oben}\\
+        (2)\quad &\overline{n_{2}} < \overline{n_{1}} \vee
+           \overline{n_{1}} = \overline{n_{2}} & \text{Disjunktionsregel}\\
+        \todo{hier fehlt was}
+      \end{align*}
+    \end{enumerate}
+  \end{enumerate}
+
+  $f(a,b) = a +b$
+  \begin{gather*}
+    x_{1} + x_{2} = x_{3}\\
+    \Svdash \overline{a} + \overline{b} = \overline{a+b}\\
+    \Svdash \exists_{1} x_{3}\colon x_{1} +x_{2} = x_{3}\\
+    \exists (x_{3}\colon x_{1}+x_{2} = x_{3}) \wedge (\forall
+       x_{3}\forall x_{4} (x_{1}+x_{2}=x_{3} \wedge x_{1}+x_{2} = x_{4})
+       \rightarrow x_{3}=x_{4})
+  \end{gather*}
+\end{bsp}
+
+Sei $f\colon\N^{k} \rightarrow \N$ eine Funktion auf die natürlichen
+Zahlen. $f$ heißt \emph{repräsentierbar} in $S$, falls es eine Formel
+$\alpha$ von $S$ mit freien Variablen $x_{1},x_{2},\ldots,x_{k+1}$ gilt,
+so dass für alle $n_{1},\ldots,n_{k}\in\N$ gilt:
+\begin{enumerate}
+ \item Falls $f(n_{1},\ldots,n_{k}) = m$, dann $\Svdash
+  \alpha[x_{1}/\overline{n_{1}}, \ldots, x_{k}/\overline{n_{k}}, x_{k+1}/m]$
+
+ \item $\Svdash\exists_{1} x_{k+1}\colon \alpha[x_{1}/\overline{n_{1}},
+  \ldots, x_{k+1}/m]$
+
+  $\exists x_{k+1}\colon $\todo{hier fehlt was}
+\end{enumerate}
+
+$f$ heißt \emph{steng repräsentierbar}, falls 2') $\Svdash \exists_{1}
+x_{k+1}\colon \alpha$
+
+\begin{bsp}
+  Die Addition ist streng repräsentierbar. $f(a,b) = a+b$ wir
+  repräsentiert durch $x_{1}+x_{2} =x_{3}$.
+  \begin{enumerate}
+   \item falls $f(a,b) = c$, dann gilt $\Svdash\overline{a} +
+    \overline{b}=\overline{c}$
+
+   \item
+
+   \item 2') zu zeigen: $\Svdash \exists_{1} x_{3} x_{1}+x_{2}=x_{3}$,
+    d.\,h. $\Svdash (\exists x_{3}\colon x_{1}+x_{2}=x_{3}) \wedge
+    (\forall x_{3} \forall x_{4}\colon x_{1}+x_{2}=x_{3}\wedge
+    x_{1}+x_{2}=x_{4} \rightarrow x_{3}=x_{4}$
+
+    Erster Term:
+    \begin{align*}
+      (1)\quad & x_{1}+x_{2}= x_{1}+x_{2} &\text{Lemma}\\
+      (2)\quad & \exists x_{3}\colon x_{1}+x_{2}=x_{3} &\text{RE4}
+    \end{align*}
+
+    Der zweite Term folgt aus der Symetrie und der Transitivität der
+    Gleichheitsrelation.
+  \end{enumerate}
+\end{bsp}
+
+\begin{bsp}
+  Die modifizierte Vorgängerfunktion $f$ ist repräsentierbar durch
+  $(x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
+  \begin{gather*}
+    f(n) =
+       \begin{cases}
+         0 &\text{falls~} n=0\\
+         n-1 &\text{sonst}
+       \end{cases}
+  \end{gather*}
+
+  \begin{enumerate}
+   \item
+    \begin{enumerate}
+     \item $n=0$
+      \begin{align*}
+        0=0 & \text{Lemma}\\
+        0=0 \wedge 0=0 &\text{Konjunktionsregel}\\
+        (0=0\wedge 0=0) \vee 0\ne0 &\text{Disjunktionsregel}
+      \end{align*}
+
+     \item $n>0$
+      \begin{align*}
+        (1)\quad & \overline{n} = \overline{n+1} & \text{Lemma}\\
+        (2)\quad & (\overline{n}+0 \wedge \overline{n}=0) \vee
+           \overline{n} = \overline{n}' &\text{Disjunktionsregel}
+      \end{align*}
+    \end{enumerate}
+
+   \item zu zeigen ist noch die Repräsentierbarkeit $\Svdash\exists_{1}
+    x_{2}\colon (x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
+  \end{enumerate}
+\end{bsp}
+
+\begin{bsp}
+  Die Null-Funktion $Z:\N\rightarrow\N$ mit $Z(n) = 0$ ist repräsentierbar.
+  \begin{gather*}
+    \alpha_{Z}\colon x_{1}=x_{1} \wedge x_{2}=0
+  \end{gather*}
+
+  Die Nachfolger-Funktion $N:\N\rightarrow\N$ mit $N(n) = n+1$ ist repräsentierbar
+  \begin{gather*}
+    \alpha_{N}\colon x_{2}= x_{1}'
+  \end{gather*}
+
+  Die Projektionsfunktion $U_{i}^{k}\colon \N^{k}\rightarrow\N$ mit
+  $U_{i}^{k}(n_{1},\ldots,n_{k})=n_{i}$ ist repräsentierbar
+  \begin{gather*}
+    \alpha_{U_{i}^{k}}\colon x_{1}=x_{1}\wedge \ldots x_{k}=x_{k} \wedge
+       x_{k+1}=x_{i}
+  \end{gather*}
+
+  Die Komposition von Funktionen: Seien $g\colon \N^{k} \rightarrow \N$
+  und $h_{1},\ldots,h_{m}\colon \N^{k}\rightarrow\N$ repräsentierbar
+  durch $\alpha, \beta_{1},\ldots,\beta_{m}$. Definiere $f\colon
+  \N^{k}\rightarrow\N$ durch
+  \begin{gather*}
+    f(n_{1},\ldots,n_{k}) = g(h_{1}(n_{1},\ldots,n_{k}),
+       h(n_{1},\ldots,n_{k}))
+  \end{gather*}
+  Dann ist $f$ repräsentierbar durch
+  \begin{gather*}
+    \exists y_{1} \ldots \exists y_{n}\colon
+       \beta_{1}(x_{1},\ldots,x_{k},y_{1}) \wedge \ldots \wedge
+       \beta_{n}(x_{1},\ldots,x_{k},y_{n}) \wedge
+       \alpha(y_{1},\ldots,y_{n}, y_{k+1})
+  \end{gather*}
+\end{bsp}
+
+% 2006-07-04
 
 \section{Primitiv rekursive Funktionen sind in S repräsentierbar}
 
@@ -5841,6 +6023,24 @@ Wir zeigen $\Svdash x=0+x$ mittels Induktion über $x$
   Aus dem Induktionsanfang und Induktionsschluss folgt mit Axiom~S9 $\Svdash
   (\forall x\colon x=0+x)$. Mit der Regel~RA4 ergibt sich $\Svdash t=0+t$.
 \end{description}
+
+\section{Blatt 11}
+\subsection*{Aufgabe 1}
+Beweisen Sie, dass die Null-Funktion (streng) repräsentierbar ist.
+
+\subsection*{Aufgabe 2}
+Beweisen Sie, dass die Konstanten-Funktion $C_{i}\colon\N\rightarrow\N$
+mit $C_{i}(n) =i$ (streng) repräsentierbar ist.
+
+\subsection*{Aufgabe 3}
+Geben Sie Formeln zur Repräsentationen der folgenden Funktionen an
+\begin{gather*}
+  f(n) = \lfloor \frac{n}{2} \rfloor \qquad
+     f(n) = \begin{cases}
+              n-1 & \text{falls $n$ ungerade}\\
+              n+1 & \text{sonst}
+            \end{cases}
+\end{gather*}
 
 \clearpage
 \pdfbookmark[0]{Index}{index}
