--- a/mundhenk-logik/skript.latex
+++ b/mundhenk-logik/skript.latex
@@ -534,6 +534,7 @@ jede Variable $X$, die in der Formel $\alpha$ vorkommt, gilt:
   X\in\mathcal{A}\quad\text{oder}\quad\neg X\in\mathcal{A}
 \end{gather*}
 
+
 Wenn $\mathcal{A}$ eine Belegung ist, die zu der aussagenlogischen
 Formel $\alpha$ passt, dann ist $\mathcal{A}(\alpha)$ wie folgt
 induktiv definiert:
@@ -4030,7 +4031,7 @@ $\overline{m}$ für %% $0\underbrace'^{\cdots}'}_{\text{$m$-mal}}$
 $0\overbrace{'\raisebox{.7ex}{$\cdots$} '}^{\text{$m$-mal}}$
 ein.
 
-\begin{lemma}
+\begin{lemma}\label{lemma-numerale1}
 Seien $m$ und $n$ natürliche Zahlen.
 \begin{enumerate}
 \item
@@ -4062,7 +4063,7 @@ Damit ist gezeigt: $\overline{n} = \overline{m} \Svdash
             \overline{0}=\overline{m-n} ~ \wedge \neg (0=\overline{m-n})$.
 Mit der Regel Widerspruchs-Beweis folgt $\Svdash \overline{n} = \overline{m}$.
 \item 
-
+\todo{Beweis einfügen}
 
 \end{enumerate}
 \end{proof}
@@ -4147,7 +4148,14 @@ natürlichen Zahlen. Versuch gescheitert.
   von $\N$ interpretieren.
 \end{satz}
 
-\section{Relationen und Funktionen auf den natürlichen Zahlen}
+% 2006-06-28
+
+\section{Repräsentierbarkeit von Relationen und Funktionen}
+
+
+Die bekannten Sätze der Zahlentheorie scheinen auch formal beweisbar. Da
+stellt sich natürlich auch die Frage, ob es Sätze gibt, die wir nicht
+beweisen können. Dafür brauchen wir den Begriff der Repräsentierbarkeit.
 
 Eine $k$-stellige Relation auf den natürlichen Zahlen
 ist eine Menge $R\subseteq\N^k$.
@@ -4171,8 +4179,8 @@ mit folgenden Eigenschaften gibt.
 \end{enumerate}
 \end{defini}
 
-Ein Beispiel für eine in $\mathrm{S}$ repräsentierbare Relation
-ist die Gleichheitsrelation $=$.
+\begin{bsp}
+Die Gleichheitsrelation $=$ ist repräsentierbrain $\mathrm{S}$.
 Sie wird repräsentiert durch die Formel $x_1=x_2$ (nennen wir $\alpha_{=}$).
 Wir haben bereits gesehen, dass folgende Eigenschaften 
 für alle natürlichen Zahlen $n$ und $m$ gelten.
@@ -4183,7 +4191,45 @@ für alle natürlichen Zahlen $n$ und $m$ gelten.
            (also $\Svdash \neg \alpha_{=}[x_1/\overline{n}, x_2/\overline{m}]$)
 \end{itemize}
 
-\todo{weiteres Beispiel}
+Die Relation $<$ ist repräsentierbar in $\mathrm{S}$ durch $x_{1} < x_{2}$ 
+(steht für   $\exists z\colon z\ne0\wedge x_{1}+z=x_{2}$).
+
+  Seien $n_{1},n_{2}\in\N$.
+  \begin{enumerate}
+   \item $n_{1}<n_{2}$. Dann gibt es ein $b\in\N$ mit $n_1+b=n_2$.
+   Es ist $\Svdash \exists z\colon z\ne0 \wedge\overline{n_{1}}+z=\overline{n_{2}}$ 
+    zu beweisen
+    \begin{align*}
+      (1)\quad &\overline{n_{1}} + \overline{b} = \overline{n_{1}}
+                                    &  \text{\autoref{lemma-numerale1}}\\
+      (2)\quad &\overline{b} \ne 0 &    \text{Axiom}\\
+      (3)\quad &\overline{b} \ne 0 \wedge 
+                     \overline{n_{1}} + \overline{b} = \overline{n_{1}}  &
+                                        \text{Konjunktionsregel}\\
+      (4)\quad & \exists z ~ z\ne 0 \wedge \overline{n_{1}} + z = \overline{n_{1}}  &
+                                        \text{RE4}\\
+    \end{align*}
+
+   \item $n_{1}\not< n_{2}$. Es ist $\Svdash \neg(\exists z\colon z\ne 0
+    \wedge \overline{n_{1}} + z = \overline{n_{2}})$ zu beweisen.
+    \begin{enumerate}
+     \item $n_{1}=n_{2}$
+      \begin{align*}
+        (1)\quad & \overline{n_{1}} = \overline{n_{2}} &\text{Lemma}\\
+        (2)\quad & \overline{n_{2}} < \overline{n_{1}} \vee
+           \overline{n_{1}} = \overline{n_{2}} & \text{Disjunktionsregel}
+      \end{align*}
+
+     \item $n_{2}<n_{1}$
+      \begin{align*}
+        (1)\quad &\overline{n_{2}} < \overline{n_{1}} &\text{wie oben}\\
+        (2)\quad &\overline{n_{2}} < \overline{n_{1}} \vee
+           \overline{n_{1}} = \overline{n_{2}} & \text{Disjunktionsregel}\\
+        \todo{hier fehlt was}
+      \end{align*}
+    \end{enumerate}
+  \end{enumerate}
+\end{bsp}
 
 \begin{defini}
 Eine $k$-stellige Funktion $f$ auf den naürlichen Zahlen
@@ -4210,6 +4256,82 @@ durch die folgende Eigenschaft ersetzt werden kann:
 \item[(2')] $\Svdash (\exists_1 x_{k+1}~ \alpha)$
 \end{itemize}
 \end{defini}
+
+
+\begin{bsp}
+
+  $f(a,b) = a +b$
+  \begin{gather*}
+    x_{1} + x_{2} = x_{3}\\
+    \Svdash \overline{a} + \overline{b} = \overline{a+b}\\
+    \Svdash \exists_{1} x_{3}\colon x_{1} +x_{2} = x_{3}\\
+    \exists (x_{3}\colon x_{1}+x_{2} = x_{3}) \wedge (\forall
+       x_{3}\forall x_{4} (x_{1}+x_{2}=x_{3} \wedge x_{1}+x_{2} = x_{4})
+       \rightarrow x_{3}=x_{4})
+  \end{gather*}
+
+
+
+  Die Addition ist streng repräsentierbar. $f(a,b) = a+b$ wird
+  repräsentiert durch $x_{1}+x_{2} = x_{3}$.
+  \begin{enumerate}
+   \item falls $f(a,b) = c$, dann gilt $\Svdash\overline{a} +
+    \overline{b}=\overline{c}$
+
+   \item 2') zu zeigen: $\Svdash \exists_{1} x_{3} x_{1}+x_{2}=x_{3}$,
+    d.\,h. $\Svdash (\exists x_{3}\colon x_{1}+x_{2}=x_{3}) \wedge
+    (\forall x_{3} \forall x_{4}\colon x_{1}+x_{2}=x_{3}\wedge
+    x_{1}+x_{2}=x_{4} \rightarrow x_{3}=x_{4}$
+
+    Erster Term:
+    \begin{align*}
+      (1)\quad & x_{1}+x_{2}= x_{1}+x_{2} &\text{Lemma}\\
+      (2)\quad & \exists x_{3}\colon x_{1}+x_{2}=x_{3} &\text{RE4}
+    \end{align*}
+
+    Der zweite Term folgt aus der Symmetrie und der Transitivität der
+    Gleichheitsrelation.
+  \end{enumerate}
+
+  Die modifizierte Vorgängerfunktion $f$ ist repräsentierbar durch
+  $(x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
+  \begin{gather*}
+    f(n) =
+       \begin{cases}
+         0 &\text{falls~} n=0\\
+         n-1 &\text{sonst}
+       \end{cases}
+  \end{gather*}
+
+  \begin{enumerate}
+   \item
+    \begin{enumerate}
+     \item $n=0$
+      \begin{align*}
+        0=0 & \text{Lemma}\\
+        0=0 \wedge 0=0 &\text{Konjunktionsregel}\\
+        (0=0\wedge 0=0) \vee 0\ne0 &\text{Disjunktionsregel}
+      \end{align*}
+
+     \item $n>0$
+      \begin{align*}
+        (1)\quad & \overline{n} = \overline{n+1} & \text{Lemma}\\
+        (2)\quad & (\overline{n}+0 \wedge \overline{n}=0) \vee
+           \overline{n} = \overline{n}' &\text{Disjunktionsregel}
+      \end{align*}
+    \end{enumerate}
+
+   \item zu zeigen ist noch  $\Svdash\exists_{1}
+    x_{2}\colon (x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
+  \end{enumerate}
+\end{bsp}
+
+Die folgenden Funktionen 
+-- Nullfunktion, Nachfolgerfunktion, Projektionsfunktion --
+bilden die Basisfunktionen der primitiv rekursiven Funktionen
+(siehe später).
+Wir zeigen, dass diese Funktionen repräsentierbar sind.
+
 
 Die einstellige Nullfunktion $Z:\N\rightarrow\N$ mit
 $Z(n)=0$ für alle $n\in\N$
@@ -4242,16 +4364,38 @@ Daraus folgt mittels Deduktionstheorem und Generalisierung der zweite Teil.
 Mittels Konjunktions-Regel fügen sich die beiden Teile
 zur gewünschten Formel zusammen.
 
-Die Nachfolgerfunktion $N:\N\rightarrow\N$ 
-ist definiert als $N(n)=n+1$ für alle $n\in\N$.
-Die Nachfolgerfunktion ist ebenfalls repräsentierbar in $\mathrm{S}$.
+  Die Nachfolger-Funktion $N:\N\rightarrow\N$ mit $N(n) = n+1$ ist repräsentierbar
+  \begin{gather*}
+    \alpha_{N}\colon x_{2}= x_{1}'
+  \end{gather*}
 
-Die Projektionsfunktion $U^k_i:\N^k\rightarrow\N$ mit $1\leq i\leq k$
-ist definiert durch $U^k_i(n_1,\ldots,n_k)=n_i$.
-Die Projektionsfunktionen sind ebenfalls repräsentierbar in $\mathrm{S}$.
+  Die Projektionsfunktion $U_{i}^{k}\colon \N^{k}\rightarrow\N$ mit
+  $U_{i}^{k}(n_{1},\ldots,n_{k})=n_{i}$ ist repräsentierbar
+  \begin{gather*}
+    \alpha_{U_{i}^{k}}\colon x_{1}=x_{1}\wedge \ldots x_{k}=x_{k} \wedge
+       x_{k+1}=x_{i}
+  \end{gather*}
+
+Fügt man repräsentierbare Funktionen mittels Komposition zusammen,
+dann erhält man wiederum repräsentierbare Funktionen.
+
+  Die Komposition von Funktionen: Seien $g\colon \N^{k} \rightarrow \N$
+  und $h_{1},\ldots,h_{m}\colon \N^{k}\rightarrow\N$ repräsentierbar
+  durch $\alpha, \beta_{1},\ldots,\beta_{m}$. Definiere $f\colon
+  \N^{k}\rightarrow\N$ durch
+  \begin{gather*}
+    f(n_{1},\ldots,n_{k}) = g(h_{1}(n_{1},\ldots,n_{k}),
+       h(n_{1},\ldots,n_{k}))
+  \end{gather*}
+  Dann ist $f$ repräsentierbar durch
+  \begin{gather*}
+    \exists y_{1} \ldots \exists y_{n}\colon
+       \beta_{1}(x_{1},\ldots,x_{k},y_{1}) \wedge \ldots \wedge
+       \beta_{n}(x_{1},\ldots,x_{k},y_{n}) \wedge
+       \alpha(y_{1},\ldots,y_{n}, y_{k+1})
+  \end{gather*}
 
 
-\todo{Komposition repräsentierbar}
 
 
 \section{Primitiv rekursive Funktionen}
@@ -5037,187 +5181,6 @@ $A(x,0)$ & $=$ & $x+2$ & für $x\geq 2$ \\
 $A(x+1,y+1)$ & $=$ & $A(A(x,y+1),y)$ & für $x\geq 0$ und $y\geq 0$
 \end{tabular}
 
-% 2006-06-28
-
-\section{Repräsentierbarkeit von Relationen und Funktionen}
-
-Die bekannten Sätze der Zahlentheorie scheinen auch formal beweisbar. Da
-stellt sich natürlich auch die Frage, ob es Sätze gibt, die wir nicht
-beweisen können. Dafür brauchen wir den Begriff der Repräsentierbarkeit.
-
-Gleichheitsrelation: Seien $n$ und $m$ natürliche Zahlen. Wenn $n=m$,
-dann gilt $\Svdash \overline{n} = \overline{m}$. Wenn $n\ne m$, dann gilt
-$\Svdash \overline{n}\ne\overline{m}$.
-
-Sei $R\subseteq \N^{k}$ eine $k$-stellige Relation über den natürlichen
-Zahlen. $R$ heißt \emph{repräsentierbar} in $S$, falls es eine Formel
-$\alpha$ von $S$ mit freien Variablen $x_{1}, x_{2},\ldots,x_{k}$ gibt,
-so dass für alle $n_{1}, n_{2},\ldots,n_{k}\in\N$ gilt:
-\begin{itemize}
- \item falls $(m,n)\in\R^{2}$ \todo{hier fehlt was}
-\end{itemize}
-
-\begin{bsp}
-  $=$ ist repräsentierbar in $S$ durch $x_{1} =x_{2}$. ohne Beweis
-
-  $<$ ist repräsentierbar in $S$ durch $x_{1} < x_{2}$ (steht für
-  $\exists z\colon z\ne0\wedge x_{1}+z=x_{2}$).
-
-  Seien $n_{1},n_{2}\in\N$
-  \begin{enumerate}
-   \item $n_{1}<n_{2}$, Es ist $\Svdash \exists z\colon z\ne0 \wedge
-    \overline{n_{1}}+z=\overline{n_{2}}$ zu beweisen
-    \begin{align*}
-      (1)\quad &\overline{n_{1}} + \overline{b} = \overline{n_{1}}
-         &\text{Lemma,~ $n_{1}+b = n_{2}$ für ein $b>0$}\\
-      (2)\quad &\overline{b} \ne 0 &\text{Axiom}\\
-      (3)\quad &\overline{b} \ne 0 \wedge \todo{hier fehlt was} &
-         \text{Konjunktionsregel}\\
-      \todo{hier fehlt was}
-    \end{align*}
-
-   \item $n_{1}\not< n_{2}$. Es ist $\Svdash \neg(\exists z\colon z\ne 0
-    \wedge \overline{n_{1}} + z = \overline{n_{2}})$ zu beweisen.
-    \begin{enumerate}
-     \item $n_{1}=n_{2}$
-      \begin{align*}
-        (1)\quad & \overline{n_{1}} = \overline{n_{2}} &\text{Lemma}\\
-        (2)\quad & \overline{n_{2}} < \overline{n_{1}} \vee
-           \overline{n_{1}} = \overline{n_{2}} & \text{Disjunktionsregel}
-      \end{align*}
-
-     \item $n_{2}<n_{1}$
-      \begin{align*}
-        (1)\quad &\overline{n_{2}} < \overline{n_{1}} &\text{wie oben}\\
-        (2)\quad &\overline{n_{2}} < \overline{n_{1}} \vee
-           \overline{n_{1}} = \overline{n_{2}} & \text{Disjunktionsregel}\\
-        \todo{hier fehlt was}
-      \end{align*}
-    \end{enumerate}
-  \end{enumerate}
-
-  $f(a,b) = a +b$
-  \begin{gather*}
-    x_{1} + x_{2} = x_{3}\\
-    \Svdash \overline{a} + \overline{b} = \overline{a+b}\\
-    \Svdash \exists_{1} x_{3}\colon x_{1} +x_{2} = x_{3}\\
-    \exists (x_{3}\colon x_{1}+x_{2} = x_{3}) \wedge (\forall
-       x_{3}\forall x_{4} (x_{1}+x_{2}=x_{3} \wedge x_{1}+x_{2} = x_{4})
-       \rightarrow x_{3}=x_{4})
-  \end{gather*}
-\end{bsp}
-
-Sei $f\colon\N^{k} \rightarrow \N$ eine Funktion auf die natürlichen
-Zahlen. $f$ heißt \emph{repräsentierbar} in $S$, falls es eine Formel
-$\alpha$ von $S$ mit freien Variablen $x_{1},x_{2},\ldots,x_{k+1}$ gilt,
-so dass für alle $n_{1},\ldots,n_{k}\in\N$ gilt:
-\begin{enumerate}
- \item Falls $f(n_{1},\ldots,n_{k}) = m$, dann $\Svdash
-  \alpha[x_{1}/\overline{n_{1}}, \ldots, x_{k}/\overline{n_{k}}, x_{k+1}/m]$
-
- \item $\Svdash\exists_{1} x_{k+1}\colon \alpha[x_{1}/\overline{n_{1}},
-  \ldots, x_{k+1}/m]$
-
-  $\exists x_{k+1}\colon $\todo{hier fehlt was}
-\end{enumerate}
-
-$f$ heißt \emph{steng repräsentierbar}, falls 2') $\Svdash \exists_{1}
-x_{k+1}\colon \alpha$
-
-\begin{bsp}
-  Die Addition ist streng repräsentierbar. $f(a,b) = a+b$ wir
-  repräsentiert durch $x_{1}+x_{2} =x_{3}$.
-  \begin{enumerate}
-   \item falls $f(a,b) = c$, dann gilt $\Svdash\overline{a} +
-    \overline{b}=\overline{c}$
-
-   \item
-
-   \item 2') zu zeigen: $\Svdash \exists_{1} x_{3} x_{1}+x_{2}=x_{3}$,
-    d.\,h. $\Svdash (\exists x_{3}\colon x_{1}+x_{2}=x_{3}) \wedge
-    (\forall x_{3} \forall x_{4}\colon x_{1}+x_{2}=x_{3}\wedge
-    x_{1}+x_{2}=x_{4} \rightarrow x_{3}=x_{4}$
-
-    Erster Term:
-    \begin{align*}
-      (1)\quad & x_{1}+x_{2}= x_{1}+x_{2} &\text{Lemma}\\
-      (2)\quad & \exists x_{3}\colon x_{1}+x_{2}=x_{3} &\text{RE4}
-    \end{align*}
-
-    Der zweite Term folgt aus der Symetrie und der Transitivität der
-    Gleichheitsrelation.
-  \end{enumerate}
-\end{bsp}
-
-\begin{bsp}
-  Die modifizierte Vorgängerfunktion $f$ ist repräsentierbar durch
-  $(x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
-  \begin{gather*}
-    f(n) =
-       \begin{cases}
-         0 &\text{falls~} n=0\\
-         n-1 &\text{sonst}
-       \end{cases}
-  \end{gather*}
-
-  \begin{enumerate}
-   \item
-    \begin{enumerate}
-     \item $n=0$
-      \begin{align*}
-        0=0 & \text{Lemma}\\
-        0=0 \wedge 0=0 &\text{Konjunktionsregel}\\
-        (0=0\wedge 0=0) \vee 0\ne0 &\text{Disjunktionsregel}
-      \end{align*}
-
-     \item $n>0$
-      \begin{align*}
-        (1)\quad & \overline{n} = \overline{n+1} & \text{Lemma}\\
-        (2)\quad & (\overline{n}+0 \wedge \overline{n}=0) \vee
-           \overline{n} = \overline{n}' &\text{Disjunktionsregel}
-      \end{align*}
-    \end{enumerate}
-
-   \item zu zeigen ist noch die Repräsentierbarkeit $\Svdash\exists_{1}
-    x_{2}\colon (x_{1}=0\wedge x_{2}=0) \vee x_{1}=x_{2}'$
-  \end{enumerate}
-\end{bsp}
-
-\begin{bsp}
-  Die Null-Funktion $Z:\N\rightarrow\N$ mit $Z(n) = 0$ ist repräsentierbar.
-  \begin{gather*}
-    \alpha_{Z}\colon x_{1}=x_{1} \wedge x_{2}=0
-  \end{gather*}
-
-  Die Nachfolger-Funktion $N:\N\rightarrow\N$ mit $N(n) = n+1$ ist repräsentierbar
-  \begin{gather*}
-    \alpha_{N}\colon x_{2}= x_{1}'
-  \end{gather*}
-
-  Die Projektionsfunktion $U_{i}^{k}\colon \N^{k}\rightarrow\N$ mit
-  $U_{i}^{k}(n_{1},\ldots,n_{k})=n_{i}$ ist repräsentierbar
-  \begin{gather*}
-    \alpha_{U_{i}^{k}}\colon x_{1}=x_{1}\wedge \ldots x_{k}=x_{k} \wedge
-       x_{k+1}=x_{i}
-  \end{gather*}
-
-  Die Komposition von Funktionen: Seien $g\colon \N^{k} \rightarrow \N$
-  und $h_{1},\ldots,h_{m}\colon \N^{k}\rightarrow\N$ repräsentierbar
-  durch $\alpha, \beta_{1},\ldots,\beta_{m}$. Definiere $f\colon
-  \N^{k}\rightarrow\N$ durch
-  \begin{gather*}
-    f(n_{1},\ldots,n_{k}) = g(h_{1}(n_{1},\ldots,n_{k}),
-       h(n_{1},\ldots,n_{k}))
-  \end{gather*}
-  Dann ist $f$ repräsentierbar durch
-  \begin{gather*}
-    \exists y_{1} \ldots \exists y_{n}\colon
-       \beta_{1}(x_{1},\ldots,x_{k},y_{1}) \wedge \ldots \wedge
-       \beta_{n}(x_{1},\ldots,x_{k},y_{n}) \wedge
-       \alpha(y_{1},\ldots,y_{n}, y_{k+1})
-  \end{gather*}
-\end{bsp}
-
 % 2006-07-04
 
 \section{Primitiv rekursive Funktionen sind in S repräsentierbar}
@@ -5234,47 +5197,75 @@ Der \glqq Trick\grqq\xspace liegt hier in der
 Kodierung der Zwischenergebnisse, die bei der Berechnung
 einer rekursiv definierten Funktion anfallen.
 
-Dazu verwenden wir den Chinesischen Restsatz.
+Dazu verwenden wir eine Folgerung aus dem Chinesischen Restsatz.
 
+\begin{korol}[Folgerung aus dem Chinesischen Restsatz]\label{korol-chin-restsatz}
 Seien $x_1,\ldots,x_k$ paarweise teilerfremde natürliche Zahlen,
 und $y_1,\ldots,y_k$ seien natürliche Zahlen mit $y_i<x_i$.
 Dann gibt es eine natürliche Zahl $z<x_1\cdot x_2 \cdot \ldots \cdot x_k$, so dass
 für alle $i=1,2,\ldots,k$ gilt:
 $y_i = z \bmod x_i$.
+\end{korol}
 
-
-Der Chinesischen Restsatz kann wie folgt zur Kodierung
+\autoref{korol-chin-restsatz} kann wie folgt zur Kodierung
 einer Folge $k_0,k_1,\ldots,k_m$ von natürlichen Zahlen verwendet werden.
 
 \begin{enumerate}
-\item bestimme $j=\max(m,k_0,k_1,\ldots,k_m)$ 
+\item bestimme $j=\max(m,k_0,k_1,\ldots,k_m)+1$ 
 \item die Zahlen $u_0,u_1,\ldots,u_m$ mit $u_i=(i+1)\cdot j! +1$
 sind paarweise teilerfremd, und es gilt $k_i<u_i$
-\item durchlaufe die Zahlen $1,2,\ldots,k_0\cdot k_1\cdot \ldots \cdot k_m$,
+\begin{quote}
+\small Sei angenommen, dass $u_i$ und $u_k$ nicht teilerfremd sind (für $i<k$).
+Dann gibt es eine Primzahl $p$, die sowohl $u_i$ als auch $u_k$ teilt.
+Dann ist $p$ auch Teiler von $u_k-u_i=(k-i)\cdot j!$.
+$p$ ist kein Teiler von $j!$, da $p$ dann sowohl ein Teiler
+von $(i+1)\cdot j!$ als auch von $u_i=(i+1)\cdot j!+1$ wäre, woraus $p=1$ folgte.
+$p$ ist auch kein Teiler von $k-i$, da $k-i<j$ und deshalb jeder Teiler von $k-i$
+ebenfalls ein Teiler von $j!$ ist.
+Da $p$ eine Primzahl ist, kann $p$ also kein Teiler von $(k-i)\cdot j!$ sein:
+Widerspruch.
+\end{quote}
+\item durchlaufe für $z$ die Zahlen $1,2,\ldots,k_0\cdot k_1\cdot \ldots \cdot k_m$,
     bis ein $z$ mit $k_i = z \bmod u_i$ gefunden wurde
 \end{enumerate}
+
+Der Chinesische Restsatz garantiert, dass das gesuchte $z$ auch
+tatsächlich existiert.
+
+\begin{bsp}
+Es soll die Folge $2,1,1$ kodiert werden.
+
+Zuerst wird $j=\max(2,2,1,1)+1=3$ bestimmt.
+Damit ergibt sich $u_0=1\cdot j!+1=7$,
+$u_1=2\cdot j!+1=13$ und $u_2=3\cdot j!+1=19$.
+Für $z$ erhalten wir dann den Wert $z=989$.
+Es gilt $989 \bmod 7=2$, $989 \bmod 13 = 1$ und $989 \bmod 19 = 1$.
+\end{bsp}
 
 Zur Dekodierung dient Gödels $\beta$-Funktion
 $\beta:\N^3\rightarrow \N$ mit
 $$
-\beta(z,c,i) ~ = ~ z \bmod ((i+1)\cdot c +1) \ \ .
+\beta(z,c,i) ~ = ~ z \bmod \left(\left(i+1\right)\cdot c +1\right) \ \ .
 $$
 Für die nach obiger Methode kodierten $k_i$ gilt $k_i=\beta(z,j!,i)$.
-Die $\beta$-Funktion ist repräsentierbar in $\mathrm{S}$ 
-durch folgende Formel $Bt(x_1,x_2,x_3,x_4)$.
+Die $\beta$-Funktion ist repräsentierbar in $\mathrm{S}$.
+Dazu schauen wir uns die Definition der $\beta$-Funktion nochmal an.
+Für gegebenes $z$, $c$ und $i$ gibt es (genau) ein $w\in\N$ mit
 $$
-x_4<(x_3'\cdot x_2)' \wedge (\exists w ~ x_1=w\cdot(x_3'\cdot x_2)'+x_4) \ \ .
+z ~=~ w \cdot \left(\left(i+1\right)\cdot c +1\right)  + \beta(z,c,i) \ \ .
 $$
-Der Term $(x_3'\cdot x_2)'$ repräsentiert $(i+1)\cdot c +1$ (also $u_i$).
-Der Teil $x_4<(x_3'\cdot x_2)'$ stellt die Forderung $k_i<u_i$ sicher.
-Der Teil $(\exists w ~ x_1=w\cdot(x_3'\cdot x_2)'+x_4)$ stellt
-damit $k_i = z \bmod u_i$ sicher.
-
+Außerdem gilt $\beta(z,c,i) \leq \left(i+1\right)\cdot c +1$.
+Damit haben wir die Bestandteile der folgenden Formel
+$Bt(x_1,x_2,x_3,x_4)$, die die $\beta$-Funktion
+repräesentiert.
+$$
+(\exists w ~ x_1=w\cdot(x_3'\cdot x_2)'+x_4)~ \wedge~ x_4<(x_3'\cdot x_2)'  \ \ .
+$$
 Wir werden nun die Repräsentation der $\beta$-Funktion benutzen,
 um durch Rekursion entstandene Funktionen zu repräsentieren.
 
 Sei $f:\N^{k+1}\rightarrow\N$ aus $g:\N^k\rightarrow \N$ und 
-$h:\N^{k+2}\rightarrow \N$ mittels Rekursion entstanden,
+$h:\N^{k+2}\rightarrow \N$ mittels Rekursion entstanden.
 \begin{eqnarray*}
 f(x_1,\ldots,x_n,0) & = & g(x_1,\ldots,x_n) \\
 f(x_1,\ldots,x_n,y+1) & = & h(y,f(x_1,\ldots,x_n,y), (x_1,\ldots,x_n))
@@ -5283,6 +5274,7 @@ $g$ und $h$ seien durch $\gamma(x_1,\ldots,x_{n+1})$ und
 $\delta(x_1,\ldots,x_{n+3})$ repräsentierbar.
 Man kann sich die Berechnung von $f(k_1,\ldots,k_n,m)$ 
 mittels folgendem \glqq Programm\grqq\xspace vorstellen.
+
 \begin{quote}
 $v_0 := g(k_1,\ldots,k_n)$ \\
 für $i:=1,2,\ldots,m$ wiederhole\\
@@ -5320,7 +5312,9 @@ Insgesamt erhalten wir folgende Formel zur Repräsentation von $f$.
 $
 \begin{array}{rcl}
 \exists z ~ \exists c & & (\exists w ~ Bt(z,c,0,w) \wedge \gamma(x_1,\ldots,x_n,w)) \\
-& \wedge & (\forall i: ~ i<m \rightarrow \beta(z,c,i+1)=h(i,\beta(z,c,i),k_1,\ldots,k_n)) \\
+& \wedge & 
+(\forall i ~ i<m \rightarrow 
+(\exists u ~ \exists v ~ Bt(z,c,i,u) \wedge Bt(z,c,i',v) \wedge \delta(i,u,x_1,\ldots,x_n,v))) \\
 & \wedge & Bt(z,c,x_{n+1},x_{n+2}) 
 \end{array}
 $
@@ -5330,6 +5324,8 @@ $
 Jede primitiv rekursive Funktion ist in $\mathrm{S}$ repräsentierbar.
 \end{satz}
 
+(Den Beweis, dass oben angeführte Formel tatsächlich die betrachtete Funktion
+repräsentiert, sparen wir uns hier.)
 
 \begin{korol}
 Jedes primitiv rekursive Prädikat ist in $\mathrm{S}$ repräsentierbar.
