* vorlage/skript.latex   + Da mir in dem Skript vogel-info4 wieder massenweise der Fehler : vs.     \colon aufgefallen ist, habe ich dazu mal einen Absatz in der Vorlage     ergänzt.
  + Zusätzlich habe ich noch ein Beispiel für \footnote{} und die
    Literaturliste aufgenommen.


git-svn-id: https://svn.lug-jena.de/uni-skripte@395 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/skripte/vorlage/skript.latex
+++ b/skripte/vorlage/skript.latex
@@ -297,8 +297,39 @@
   unabhängig vom Namen das Bild als PDF oder PS.
 \end{satz}
 
+\begin{festl}
+  Im Mathematikmodus drückt man mit einem Doppelpunkt \texttt{:} nicht
+  unbedingt das aus, was man will. Der Doppelpunk ist der
+  Divisionsoperator, wie er z.\,B. in "`$1:2 = 0\mathord{,}5$"'
+  \footnote{Da im Englischen das Komma der Trenner für die
+    Tausenderstelle ist man \texttt{\textbackslash{}mathord\{,\}} verwenden,
+    sonst stimmt der Abstand nicht: $0,5$ (ohne) statt $0\mathord{,}5$
+    (mit). Siehe
+    \href{http://www.dante.de/CTAN//info/math/voss/mathmode/Mathmode.pdf}
+    {Mathmode von Herbert Voss}\cite{mathmode} Abschnitt
+    "`11.4 Dot versus comma"'}
+  verwendet wird. Wenn man jedoch $f\colon \R\rightarrow\R$ oder
+  $\{a\colon a\in\N\cap\Q\}$ ausdrücken will, muss man \verb+\colon+
+  verwenden.
+
+  Der Unterschied zeigt sich u.\,a. im linken und rechten Abstand
+  $g:A\rightarrow B$ mit Doppelpunkt im Vergleich zu $g\colon
+  A\rightarrow B$ mit \verb+\colon+. Siehe
+  \href{ftp://ftp.ams.org/pub/tex/doc/amsmath/short-math-guide.pdf}
+  {Short Math Guide for \LaTeX{}}\cite{shmathguide}
+\end{festl}
+
 \clearpage
 \appendix
+\begin{thebibliography}{99}
+ \bibitem{mathmode} Math mode von Herbert Voss,\\
+  \url{http://www.dante.de/CTAN//info/math/voss/mathmode/Mathmode.pdf}
+
+ \bibitem{shmathguide} Short Math Guide for \LaTeX{},\\
+  \url{ftp://ftp.ams.org/pub/tex/doc/amsmath/short-math-guide.pdf}
+\end{thebibliography}
+
+\clearpage
 \pdfbookmark[0]{Index}{index}
 \printindex
 
