- kleine typos ausgebessert
git-svn-id: https://svn.lug-jena.de/uni-skripte@400 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/engelbert-mass-integral/skript.latex
+++ b/engelbert-mass-integral/skript.latex
@@ -208,7 +208,7 @@
 
 % 12.10.04
 
-\pdfbookmark[0]{Litheraturverzeichnis}{litheraturverzeichnis}
+\pdfbookmark[0]{Literaturverzeichnis}{literaturverzeichnis}
 \begin{thebibliography}{Hirzebruch}
  \bibitem{Meschkowski} H. Meschkowski: Probleme des Undendlichen -- Werk
   und Leben Georg Contors, Vieweg
@@ -3086,7 +3086,7 @@ $(\Omega, \mathcal{F})$, $\mu$(A) = $\int_{A} f\,\mathfrak{m} (:=
     gezeigt: $m(\{f_{1}>f_{2}\})=0$
     $\Rightarrow$ $f_{1}\leq f_{2}$ m-fü
 
-    annalog: $f_{2}\leq f_{2}$ m-fü
+    analog: $f_{2}\leq f_{2}$ m-fü
   \end{proof}
 \end{satz}
 
